# s3manifestcollectstatic

./: .flake8  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  pyproject.toml
s3manifestcollectstatic/: apps.py
s3manifestcollectstatic/management/commands/: s3manifestcollectstatic.py
