[tool.poetry]
name = "s3manifestcollectstatic"
version = "0.3.2"
description = "Optimized collectstatic for S3ManifestStaticStorage"
authors = ["Daniel Dương <daniel.duong@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dduong42/s3manifestcollectstatic"
repository = "https://github.com/dduong42/s3manifestcollectstatic"
keywords = ["django", "collectstatic", "S3", "manifest"]
classifiers = [
	"Environment :: Web Environment",
	"Intended Audience :: Developers",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pre-commit = { version = "^3.3.2", python = "^3.8" }

[tool.poetry.group.test.dependencies]
django = { version = "^4.2", python = "^3.8" }
django-storages = { version = "^1.13", python = "^3.7" }
boto3 = { version = "^1.28", python = "^3.7" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.black]
line_length = 100
